updating text display

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 
         <div class="accordion accordion-flush" id="accordionExample">
 
-
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -169,53 +168,43 @@
             </div>
         </div>
     </div>
-    <div class="type">
-        <p id="type">
-            Hi!
-            Here are some examples of the many things we can do together.
-            Imagine automatically going to multiple NASA's websites and collecting information about Jupiter to display it any way you like on your own website.
-        </p>
-        <p id="type">
-            Or how about obtaining current weather of hundreds of cities around the world to conduct your own study
-            about the effect of latitude on the climate and then displaying it on your own interactive website.
-        </p>
-        <p id="type">
-            How about if we obtain Cesus Data from a data bank like Kaggle and with the use of HTML, CSS and JavaScript
-            libraries create an interactive website that would allows us to visually analyze correlation between
-            location, obesity, income, helthcare, and smokers.
-            How about creating a full stack application that through a website securely manages a restaurant's data on an SQL Database server.
-        </p>
-        <p id="type">
-            How about if we display the latest news and updates of the planet Mars by scrapping the latest images, news and weather information from NASA, Twitter, Space Facts and USGS websites.
-            Imagine using Firebase, an online Google Database that through the use of a website allows us to manage a train's scheduler live.
-        </p>
-        <p id="type">
-            Or we can acquire earthquake and tactonic plates information in a GeoJSON format from an USGS API and with the use of HTML, CSS, JavaScript and Leaflet CDN display the world's latest earthquakes' locations, magnitude and depth on different map styles.
-        </p>
-        <p id="type">
-            For example with the Python language and Pandas library we conduct an analysis of reginal schools' data to obtain an inside on school budget, school types, students count, passing averages of the math and reading scores to determine the difference between charter or district, inexpensive or expensive schools have on overall passing grades.
-        </p>
-        <p id="type">
-            how about with Tableau, we can create detailed visualizations which proivdes a quick analysis into
-            CitiBiki's data.
-        </p>
-        <p id="type">
-            Let's create a backend application with the use of NodeJS and MySQL to create, read, update and delete data of and online store on a SQL database server.
-        </p>
-        <p id="type">
-            How about if we create a backend application that similates Iphone's SIRI. While SIRI is a speech
-            interpretation and recognition interface, our app would be a language interpretation and recognition
-            interface. With the use NodeJS and a few APIs we would create command line app that would provide Spotify songs, concerts from Bands in Town, tweets from Twitter and movies from OMDB.
-        </p>
-        <p id="type">
-            How about if with the use of Python, Jupyter Notebook, Pandas and Matplotlib we analyze drugs' information to determine which drug is the most effective against cancer and visualize the results and predictions of the information analyzed.
-        </p>
-        <p id="type">
-            Or what about creating a interative dashboard with JavaScript and D3JS library that allows us to analyze biodiversity very close to home, our belly button.
-        </p>
-        <p id="type">
-            How about if with the Python language we analyze financial data to obtain a summary of revenue fluctuations in which we can see the average revenue change, total gain or loss, greatest increase and greatest decrease.
-        </p>
+    <div id="typeDiv">
+        <div class="type">
+            <p>
+                Here are some examples of the many things we can do together.
+                Imagine automatically going to multiple NASA's websites and collecting information about Jupiter to display it any way you like on your own website.
+                <br><br>
+                Or how about obtaining current weather of hundreds of cities around the world to conduct your own study about the effect of latitude on the climate and then displaying it on your own interactive website.
+               <br><br>
+                How about if we obtain Cesus Data from a data bank like Kaggle and with the use of HTML, CSS and
+                JavaScript libraries create an interactive website that would allows us to visually analyze correlation between location, obesity, income, helthcare, and smokers.
+                <br><br>
+                How about creating a full stack application that through a website securely manages a restaurant's data on an SQL Database server.
+                <br><br>
+                How about if we display the latest news and updates of the planet Mars by scrapping the latest images, news and weather information from NASA, Twitter, Space Facts and USGS websites.
+                <br><br>
+                Imagine using Firebase, an online Google Database that through the use of a website allows us to manage a train's scheduler live.
+                <br><br>
+                Or we can acquire earthquake and tactonic plates information in a GeoJSON format from an USGS API and with the use of HTML, CSS, JavaScript and Leaflet CDN display the world's latest earthquakes' locations, magnitude and depth on different map styles.
+                <br><br>
+                For example with the Python language and Pandas library we conduct an analysis of reginal schools' data to obtain an inside on school budget, school types, students count, passing averages of the math and reading scores to determine the difference between charter or district, inexpensive or expensive schools have on overall passing grades.
+                <br><br>
+                how about with Tableau, we can create detailed visualizations which proivdes a quick analysis into CitiBiki's data.
+                <br><br>
+                Let's create a backend application with the use of NodeJS and MySQL to create, read, update and delete data of and online store on a SQL database server.
+                <br><br>
+                How about if we create a backend application that similates Iphone's SIRI. While SIRI is a speech
+                interpretation and recognition interface, our app would be a language interpretation and recognition interface. With the use NodeJS and a few APIs we would create command line app that would provide Spotify songs, concerts from Bands in Town, tweets from Twitter and movies from OMDB.
+                <br><br>
+                How about if with the use of Python, Jupyter Notebook, Pandas and Matplotlib we analyze drugs'
+                information to determine which drug is the most effective against cancer and visualize the results and predictions of the information analyzed.
+                <br><br>
+                Or what about creating a interative dashboard with JavaScript and D3JS library that allows us to analyze biodiversity very close to home, our belly button.
+                <br><br>
+                How about if with the Python language we analyze financial data to obtain a summary of revenue
+                fluctuations in which we can see the average revenue change, total gain or loss, greatest increase and greatest decrease.
+            </p>
+        </div>
     </div>
     <div class="carousel">
         <img class="caroImg" src="./assets/images/jup_2.png">
