implementing speech object

--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
         </div>
     </div>
     <div id="typeDiv">
+        <h4 id="speechTitle">Title</h4>
         <div class="type">
-            <p>
+            <!-- <p>
                 Here are some examples of the many things we can do together.
                 Imagine automatically going to multiple NASA's websites and collecting information about Jupiter to display it any way you like on your own website.
                 <br><br>
@@ -203,7 +204,7 @@
                 <br><br>
                 How about if with the Python language we analyze financial data to obtain a summary of revenue
                 fluctuations in which we can see the average revenue change, total gain or loss, greatest increase and greatest decrease.
-            </p>
+            </p> -->
         </div>
     </div>
     <div class="carousel">
