--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="accordion-body text-center">
 
                         <a class="text-decoration-none" target="_black"
-                            href="https://calendly.com/geronimo-perez/50-minute-tutoring-session-1">
+                            href="https://calendly.com/geerooniimoo/50min">
 
                             <svg width="210" height="145" class="calendar">
                                 <rect x='5' y='5' rx="5" ry="5" width="200" height="130"
@@ -169,9 +169,9 @@
         </div>
     </div>
     <div id="typeDiv">
-        <h4 id="speechTitle">Title</h4>
+        <h4 id="speechTitle"></h4>
         <div class="type">
-            <!-- <p>
+            <!-- <p class="typeP">
                 Here are some examples of the many things we can do together.
                 Imagine automatically going to multiple NASA's websites and collecting information about Jupiter to display it any way you like on your own website.
                 <br><br>
