working on images swap

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
     </div>
     <div class="carousel">
-        <img class="caroImg" src="./assets/images/jup_2.png">
+        <!-- <img class="caroImg" src="./assets/images/jup_2.png"> -->
     </div>
 
     <!-- Modal -->
