improved title display

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
         </div>
     </div>
     <div id="typeDiv">
-        <h4 id="speechTitle"></h4>
+        <div id="titleDiv">
+            <h4 id="speechTitle" class="scroll2"></h4>
+        </div>
         <div class="type">
             <!-- <p class="typeP">
                 Here are some examples of the many things we can do together.
