--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
                 fluctuations in which we can see the average revenue change, total gain or loss, greatest increase and greatest decrease.
             </p> -->
         </div>
+        <div id="rewind">
+            <svg>
+                <polygon fill="black" stroke="red" points="30,72 50,60 60,85"></polygon>
+                <polygon fill="black" stroke="red" points="55,60 61,60 72,87 65,86"></polygon>
+            </svg>
+        </div>
+        <div id="forward">
+            <svg>
+                <polygon fill="black" stroke="red" points="30,60 70,75 45,85"></polygon>
+                <polygon fill="black" stroke="red" points="18,57 25,59 41,87 35,87"></polygon>
+            </svg>
+            
+        </div>
     </div>
     <div class="carousel">
         <!-- <img class="caroImg" src="./assets/images/jup_2.png"> -->
