added links to linkedIn and Github

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
         <div id='title' class="bg-dark text-white m-auto">
             <h4 class="text-center p-3">
-                Hi, I'm <a href="https://linkedin.com/in/geronimoperez"> <span class="fst-italic">
-                        Geronimo</span></a>, <br> a data analyst and web developer.<br> How can I help?
+                Hi, I'm <span class="geronimo">
+                        Geronimo</span>, <br> a data analyst and web developer.<br> How can I help?
             </h4>
+            <a target="_blank" href="https://linkedin.com/in/geronimoperez"><img src="./assets/images/linkedIn.png" class="titleImg"></a><a target="_blank" href="https://github.com/Geerooniimoo"><img class="titleImg2" src="./assets/images/github.png"></a>
         </div>
 
         <div class="accordion accordion-flush" id="accordionExample">
