--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
 </head>
 
 <body>
+    <a class="linkImg" target="_blank" href="https://calendly.com/Geerooniimoo">
+        <img id="calenImg" src="./assets/images/calendar.png" alt="calendly">
+        <h6>Schedule Session</h6>
+    </a>
+    <a class="linkImg2" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
+        <svg  id="evalImg">
+            <rect width="100%" height="100%" fill="purple" stroke="black"></rect>
+            <text fill="white" style="font-size:20%" y="15%" x="20%">Student's Evaluation</text>
+            <rect width="10%" height="10%" fill="white" y="25%" x="5%" stroke="black"></rect>
+            <rect width="10%" height="10%" fill="white" y="40%" x="5%" stroke="black"></rect>
+            <rect width="10%" height="10%" fill="white" y="55%" x="5%" stroke="black"></rect>
+            <rect width="10%" height="10%" fill="white" y="70%" x="5%" stroke="black"></rect>
+            
+            <rect width="70%" height="10%" fill="white" y="25%" x="20%" stroke="black"></rect>
+            <rect width="70%" height="10%" fill="white" y="40%" x="20%" stroke="black"></rect>
+            <rect width="70%" height="10%" fill="white" y="55%" x="20%" stroke="black"></rect>
+            <rect width="70%" height="10%" fill="white" y="70%" x="20%" stroke="black"></rect>
+        </svg>
+
+        <h6>Student's Evaluation</h6>
+    </a>
     <div id="topDiv">
-        <div class="sessions mb-4">
-            <h4 class="text-center text-white pb-2 fst-italic">Tutored over
+        <div class="sessions">
+            <h4 class="text-center text-white fst-italic">Tutored over
                 <span class="hours">
                     <svg class="smoke">
                         <ellipse class="eli1"></ellipse>
@@ -65,7 +86,7 @@
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Knowledge base
+                        <h5>Knowledge base</h5> 
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -99,7 +120,7 @@
                 <h2 class="accordion-item" id="headingSix">
                     <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                        Schedule Session
+                        <h5>Schedule Session</h5>
                     </button>
                 </h2>
                 <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
@@ -120,14 +141,14 @@
                                     <text x='135' y='20' style='font-size:.65rem;font-weight:750;'>TH</text>
                                     <text x='160' y='20' style='font-size:.65rem;font-weight:750;'>F</text>
                                     <text x='175' y='20' style='font-size:.65rem;font-weight:750;'>S</text>
-                                    <text x='22' y='35' style='font-size:.65rem;font-weight:750;'>4 PM</text>
-                                    <text x='22' y='45' style='font-size:.65rem;font-weight:750;'>5 PM</text>
-                                    <text x='22' y='55' style='font-size:.65rem;font-weight:750;'>6 PM</text>
-                                    <text x='22' y='65' style='font-size:.65rem;font-weight:750;'>7 PM</text>
-                                    <text x='22' y='75' style='font-size:.65rem;font-weight:750;'>8 PM</text>
-                                    <text x='22' y='85' style='font-size:.65rem;font-weight:750;'>9 PM</text>
-                                    <text x='15' y='95' style='font-size:.65rem;font-weight:750;'>10 PM</text>
-                                    <text x='15' y='105' style='font-size:.65rem;font-weight:750;'>11 PM</text>
+                                    <text x='22' y='35' style='font-size:.65rem;font-weight:750;'>3 PM</text>
+                                    <text x='22' y='45' style='font-size:.65rem;font-weight:750;'>4 PM</text>
+                                    <text x='22' y='55' style='font-size:.65rem;font-weight:750;'>5 PM</text>
+                                    <text x='22' y='65' style='font-size:.65rem;font-weight:750;'>6 PM</text>
+                                    <text x='22' y='75' style='font-size:.65rem;font-weight:750;'>7 PM</text>
+                                    <text x='22' y='85' style='font-size:.65rem;font-weight:750;'>8 PM</text>
+                                    <text x='22' y='95' style='font-size:.65rem;font-weight:750;'>9 PM</text>
+                                    <text x='15' y='105' style='font-size:.65rem;font-weight:750;'>10 PM</text>
                                     <text x='65' y='125' style='font-size:.65rem;font-weight:750;'>Working hours in
                                         EST</text>
                                 </g>
@@ -150,7 +171,7 @@
                 <h2 class="accordion-item" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Miscellaneous
+                        <h5>Miscellaneous</h5>
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
