removed projects and miscellineous

--- a/index.html
+++ b/index.html
@@ -168,22 +168,17 @@
             </div>
 
             <div class="accordion-item">
-                <h2 class="accordion-item" id="headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        <h5>Miscellaneous</h5>
-                    </button>
-                </h2>
+                
+                <h3 class="accordion-item" id="headingOne">
+
+                       <a class="col-md-3 pb-2 text-decoration-none col-md-3 pb-2"
+                           href="https://bit.ly/students-eval" target="_blank">Evaluation</a>
+                </h3>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <ul>
-                            <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
-                                    data-bs-toggle="modal" data-bs-target="#repos">Projects</a></li>
-                            <li><a class="col-md-3 pb-2 text-decoration-none col-md-3 pb-2"
-                                    href="https://bit.ly/students-eval" target="_blank">Evaluation</a></li>
-                            <li><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2" href="#"
-                                    data-bs-toggle="modal" data-bs-target="#github-history">Github View</a></li>
+                            <li>
                         </ul>
                     </div>
                 </div>
@@ -250,105 +245,6 @@
 
     <!-- Modal -->
     <div>
-        <div class="modal fade" id="github-history" tabindex="-1" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Github History under Geerooniimoo</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <img class="w-100" src='assets/images/Github-2021.png'>
-                        <img class="w-100" src='assets/images/Github-2020.png'>
-                        <img class="w-100" src='assets/images/Github-2019.png'>
-                        <img class="w-100" src='assets/images/Github-2018.png'>
-                        <img class="w-100" src='assets/images/Github-2017.png'>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="repos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">PROJECTS</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="container-fluid row">
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#plotly" href="#">Biodiversity Dashboard with Plotly</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#python" href="#">Finacial Analysis With Python</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#pandas" href="#">School Data Analysis with Pandas</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
-                                href="#">Data Visualization with Bootstrap</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#tableau" href="#">CitiBike Data Analysis with Tableau</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#matplotlib" href="#">Drugs Data Analysis with Matplotlib</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#team"
-                                href="#">Teams builder with Node, Jest testing and HTML </a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#vba"
-                                href="#">Stocks analysis with Microsoft's programming language (VBA)</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#leaflet" href="#">USGS Earthquakes Interactive Dashboard with Leaflet
-                                maps</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#firebase" href="#">Live Train Scheduler with Googles' Firebase</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
-                                href="#">Visualize Census data with D3js CDN and JavaScript</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#sqlalchemy" href="#">Python Climate API App with SQLAlchemy library</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#gamazon" href="#">Node purchansing app that manages data in SQL
-                                server</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal"
-                                data-bs-target="#burger" href="#">CRUD data safely in SQL server through a Full Stack
-                                Website</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#mars">Mars current data scraped from NASA's websites with Python</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#liri"
-                                href="#">Language Interpretation & Recognition Interface (APIs)</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#jup"
-                                href="#">Scrape and visualize Jupiter's data with Python</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
-                                href="#">Model and analyze data with SQL language</a>
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">NFL-RECORDS</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">heroesmemorygame</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">VBA-Scripting</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">SpiritualEngineering</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">JavaScript-Projects</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Password-Generator</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">FriendFinder</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">realnewslinks</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">HYBC</a>     
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">New-York-Times-API</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">WeatherForecast</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">GifTastic</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Calender</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#"
-                                href="#">python-api-Projects</a> -->
-                            <!-- <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">porfolio</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">NodeGuessGame</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">CristalCollectorGame</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Hangman-Game</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">BoxingGame</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Responsive-HYBC</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Bootstrap-Portfolio</a>
-                            <a class="col-md-4 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#" href="#">Basic-Portfolio</a> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="modal fade" id="firebase" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
