--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </g>
                     </svg>
                 </span>
-                hours
+                sessions
             </h4>
         </div>
 
@@ -134,7 +134,6 @@
                     </h4>
                 </a>
             </div>
-
         </div>
     </div>
     <div id="typeDiv">
