modified scheduling link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a class="linkImg" target="_blank" href="https://calendly.com/Geerooniimoo">
+    <a class="linkImg" target="_blank" href="https://calendly.com/geerooniimoo/50min">
         <img id="calenImg" src="./assets/images/calendar.png" alt="calendly">
         <h6>Schedule Session</h6>
     </a>
