changed schedule link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a class="linkImg" target="_blank" href="https://calendly.com/geerooniimoo/50min">
+    <a class="linkImg" target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez">
         <img id="calenImg" src="./assets/images/calendar.png" alt="calendly">
         <h6>Schedule Session</h6>
     </a>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="accordion-item">
-                <a class="text-decoration-none" target="_black" href="https://calendly.com/geerooniimoo/50min">
+                <a class="text-decoration-none" target="_black" href="https://calendly.com/dv-tutor-team/geronimo-perez>
                     <h4 class="accordion-item">
                         schedule session
                     </h4>
