--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-    <a class="linkImg" target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez">
+    <nav>
+        <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank">Developer Tutoring Sessions</a>
+
+        <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank">Analyst Tutoring Sessions</a>
+
+        <a target="_blank"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">Student
+            Evaluation</a>
+
+        <!-- <a class="linkImg" target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez">
         <img id="calenImg" src="./assets/images/calendar.png" alt="calendly">
         <h6>Schedule Session</h6>
     </a>
@@ -33,7 +42,9 @@
         </svg>
 
         <h6>Student's Evaluation</h6>
-    </a>
+    </a> -->
+    </nav>
+
     <div id="topDiv">
         <div class="sessions">
             <h4 class="text-center text-white fst-italic">Tutored over
@@ -60,8 +71,8 @@
                             <text x='2' y='38' class="textLetter">3</text>
                             <text x='26' y='40' class="textShadow">,</text>
                             <text x='24' y='38' class="textLetter">,</text>
-                            <text x='34' y='40' class="textShadow">0</text>
-                            <text x='28' y='38' class="textLetter">0</text>
+                            <text x='34' y='40' class="textShadow">5</text>
+                            <text x='28' y='38' class="textLetter">5</text>
                             <text x='54' y='40' class="textShadow">0</text>
                             <text x='48' y='38' class="textLetter">0</text>
                             <text x='74' y='40' class="textShadow">0</text>
@@ -89,10 +100,32 @@
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4>Knowledge base</h4>
+                        <h4>Schedule Student's Sessions</h4>
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank"><button
+                                class="mb-4 btn btn-outline-primary">
+                                <h6>Developer Tutoring Sessions</h6>
+                            </button></a>
+                        <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank"><button
+                                class="btn btn-outline-primary">
+                                <h6>Analyst Tutoring Sessions</h6>
+                            </button></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="accordion-item">
+                <h2 class="accordion-item" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseTwo">
+                        <h4>Knowledge base</h4>
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>
@@ -120,20 +153,29 @@
             </div>
 
             <div class="accordion-item">
-                <a class="text-decoration-none" target="_black" href="https://calendly.com/dv-tutor-team/geronimo-perez>
-                    <h4 class="accordion-item">
-                        schedule session
-                    </h4>
-                </a>
+                <h2 class="accordion-item" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                        <h4>Miscellaneous</h4>
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <a target="_blank"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform"><button
+                                class="mb-4 btn btn-outline-primary">
+                                <h6>Student Evaluation</h6>
+                            </button></a>
+                            <br>
+                        <a target="_blank" href="https://calendly.com/geronimo-perez"><button
+                                class="btn btn-outline-primary">
+                                <h6>Post Class Session</h6>
+                            </button></a>
+                    </div>
+                </div>
             </div>
 
-            <div class="accordion-item">
-                <a class="text-decoration-none" href="https://bit.ly/students-eval" target="_blank">
-                    <h4 class="accordion-item">
-                        Evaluation
-                    </h4>
-                </a>
-            </div>
         </div>
     </div>
     <div id="typeDiv">
