--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </h4>
         </div>
 
-        <div id='title' class="bg-dark text-white m-auto">
+        <div id='title' class="text-white m-auto">
             <h4 class="text-center p-3">
                 Hi, I'm <span class="geronimo">
                     Geronimo</span>, <br> a data analyst and web developer.<br> How can I help?
