added post classes sessions

--- a/index.html
+++ b/index.html
@@ -14,35 +14,11 @@
 <body>
     <nav>
         <a href="https://calendly.com/fsf-tutor-team/geronimo-perez" target="_blank">Developer Tutoring Sessions</a>
-
         <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank">Analyst Tutoring Sessions</a>
-
+        <a href="https://calendly.com/geronimo-perez" target="_blank">Post Classes Sessions</a>
         <a target="_blank"
             href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">Student
             Evaluation</a>
-
-        <!-- <a class="linkImg" target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez">
-        <img id="calenImg" src="./assets/images/calendar.png" alt="calendly">
-        <h6>Schedule Session</h6>
-    </a>
-    <a class="linkImg2" target="_blank"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
-        <svg id="evalImg">
-            <rect width="100%" height="100%" fill="purple" stroke="black"></rect>
-            <text fill="white" style="font-size:20%" y="15%" x="20%">Student's Evaluation</text>
-            <rect width="10%" height="10%" fill="white" y="25%" x="5%" stroke="black"></rect>
-            <rect width="10%" height="10%" fill="white" y="40%" x="5%" stroke="black"></rect>
-            <rect width="10%" height="10%" fill="white" y="55%" x="5%" stroke="black"></rect>
-            <rect width="10%" height="10%" fill="white" y="70%" x="5%" stroke="black"></rect>
-
-            <rect width="70%" height="10%" fill="white" y="25%" x="20%" stroke="black"></rect>
-            <rect width="70%" height="10%" fill="white" y="40%" x="20%" stroke="black"></rect>
-            <rect width="70%" height="10%" fill="white" y="55%" x="20%" stroke="black"></rect>
-            <rect width="70%" height="10%" fill="white" y="70%" x="20%" stroke="black"></rect>
-        </svg>
-
-        <h6>Student's Evaluation</h6>
-    </a> -->
     </nav>
 
     <div id="topDiv">
@@ -167,7 +143,7 @@
                                 class="mb-4 btn btn-outline-primary">
                                 <h6>Student Evaluation</h6>
                             </button></a>
-                            <br>
+                        <br>
                         <a target="_blank" href="https://calendly.com/geronimo-perez"><button
                                 class="btn btn-outline-primary">
                                 <h6>Post Class Session</h6>
@@ -204,6 +180,44 @@
 
     <!-- Modal -->
     <div>
+        <div class="modal fade" id="firebase" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="modal-header">
+                            <h3 class="modal-title ms-auto" id="exampleModalLabel">Live train scheduler with the use of
+                                Google's Firebase</h3>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="container">
+                            <div class="my-4 row">
+                                <div class="firebase img fw-bold">
+                                    <div class="img">
+
+                                        <p>Built The Train Scheduler App with the used of HTML, CSS, javaScript,
+                                            BootStrap and
+                                            Firebase. The Google's Firebase functionalilies allow the user to add data
+                                            to the Firebase database live.</p>
+
+                                        <p>We can create a train route by providing origin, destination frequency and
+                                            initial time. Then this record will be pushed to firebase database and
+                                            rendered to the browser page automatically. The bowser then will locally
+                                            update the
+                                            minute by minute next train arriaval with the use of JavaScript.</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row">
+                                <img src="./assets/images/firebase3.png" class="col-md-12 img">
+                                <img src="./assets/images/firebase2.png" class="col-md-12 mt-4 img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="modal fade" id="firebase" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
