added calendly link with payment option

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="https://calendly.com/fsf-tutor-team/geronimo-perez" target="_blank">Developer Tutoring Sessions</a>
         <a href="https://calendly.com/dv-tutor-team/geronimo-perez" target="_blank">Analyst Tutoring Sessions</a>
-        <a href="https://calendly.com/geronimo-perez" target="_blank">Post Classes Sessions</a>
+        <a href="https://calendly.com/geronimo-perez/private-tutoring-session" target="_blank">Post Classes Sessions</a>
         <a target="_blank"
             href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">Student
             Evaluation</a>
