modified miscellaneous links

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                                 <h6>Student Evaluation</h6>
                             </button></a>
                         <br>
-                        <a target="_blank" href="https://calendly.com/geronimo-perez"><button
+                        <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
                                 class="btn btn-outline-primary">
-                                <h6>Post Class Session</h6>
+                                <h6>Post Classes Sessions</h6>
                             </button></a>
                     </div>
                 </div>
