--- a/index.html
+++ b/index.html
@@ -106,23 +106,92 @@
                     <div class="accordion-body">
                         <p>
                             <strong>Data Analytics: </strong>
-                            Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
-                            (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
-                            API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
-                            Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
-                            Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
-                            Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
-                            Hadoop, Amazon Web Services and Machine Learning)
+                            Intermediate Excel
+
+                            • Pivot Tables
+                            • VBA Scripting
+                            Fundamental Statistics
+
+                            • Modelling
+                            • Forecast
+                            Python Programming
+
+                            • Python 3
+                            • NumPy
+                            • Pandas
+                            • Matplotlib
+                            • API Interactions
+                            Databases
+
+                            • Postgres/pgAdmin
+                            • MongoDB
+                            • Extract-Transform-Load (ETL)
+                            Front End Web Visualization
+
+                            • HTML
+                            • CSS
+                            • Bootstrap
+                            • Dashboarding
+                            • JavaScript
+                            • Geomapping with JavaScript libraries
+                            Business Intelligence Software
+
+                            • Tableau
+                            Advanced Topics
+
+                            • Big Data Analytics with Hadoop
+                            • Amazon Web Services
+                            • Machine Learning
                         </p>
                         <p>
                             <strong>Web Developer: </strong>
-                            Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
-                            (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
-                            API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
-                            Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
-                            Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
-                            Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
-                            Hadoop, Amazon Web Services and Machine Learning)
+                            Computer Science applied to JavaScript
+                            • Design Patterns
+                            • Data Structures
+                            • Algorithms
+                            • Big O Notation
+
+                            Browser Based Technologies
+                            • HTML
+                            • CSS
+                            • JavaScript
+                            • jQuery
+                            • Responsive Design
+                            • Bootstrap
+                            • Handlebars
+                            • Local Storage, Session Storage, IndexedDB
+                            • React.js
+
+                            Deployment
+                            • Heroku
+                            • Git
+
+                            Locally Popular MVC Framework
+                            • C#/ASP.NET
+                            • Python/Django
+                            • Java/Spring
+                            • PHP/Laravel
+
+                            Databases
+                            • MySQL
+                            • MongoDB
+
+                            Server-Side Development
+                            • Express
+                            • User Authentication
+                            • Sequelize
+                            • MERN Stack (MongoDB, Express.js, React.js, Node.js)
+
+                            Quality and Performance
+                            • Unit Testing
+                            • Google Lighthouse
+                            • Webpack
+                            • PWAs (Progressive Web Apps)
+                            • Lazy Loading
+                            • Service Workers
+
+                            Accessibility
+                            • Semantic HTML
                         </p>
                     </div>
                 </div>
