--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
         </div>
     </div>
-    <div class="carousel">
+    <div id="carousel">
         <!-- <img class="caroImg" src="./assets/images/jup_2.png"> -->
     </div>
 
