changed tutoring hours

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     </svg>
                     <svg id="hours">
                         <g>
-                            <text x='8' y='40' class="textShadow">3</text>
-                            <text x='2' y='38' class="textLetter">3</text>
+                            <text x='8' y='40' class="textShadow">4</text>
+                            <text x='2' y='38' class="textLetter">4</text>
                             <text x='26' y='40' class="textShadow">,</text>
                             <text x='24' y='38' class="textLetter">,</text>
-                            <text x='34' y='40' class="textShadow">5</text>
-                            <text x='28' y='38' class="textLetter">5</text>
+                            <text x='34' y='40' class="textShadow">0</text>
+                            <text x='28' y='38' class="textLetter">0</text>
                             <text x='54' y='40' class="textShadow">0</text>
                             <text x='48' y='38' class="textLetter">0</text>
                             <text x='74' y='40' class="textShadow">0</text>
@@ -62,8 +62,7 @@
 
         <div id='title' class="text-white m-auto">
             <h4 class="text-center p-3">
-                Hi, I'm <span class="geronimo">
-                    Geronimo</span>, <br> a data analyst and web developer.<br> How can I help?
+               Tutoring students and professionals one session at the time
             </h4>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez"><img src="./assets/images/linkedIn.png"
                     class="titleImg"></a><a target="_blank" href="https://github.com/Geerooniimoo"><img
